--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,13 @@
       <div class="gallery"></div>
     </div>
     <div class="arrow" hidden></div>
+    <div class="container-loader">
+      <div class="loader">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+      </div>
+    </div>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
